# remmina-plugin-teamviewer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
remmina-plugin-teamviewer/: CMakeLists.txt
remmina-plugin-teamviewer/src/: plugin_config.h  remmina_plugin.c
